--- a/Bootstrap_examples/Components/componenty.html
+++ b/Bootstrap_examples/Components/componenty.html
@@ -59,7 +59,7 @@
         <div class="col-12">
             Далеко-далеко за словесными <span class="badge badge-primary">это</span> горами в стране, гласных и согласных живут рыбные тексты. До зыбких запятых дорогу предупреждал <span class="badge badge-secondary">текст</span> вскоре языком родного большой всемогущая, всем. Карманные составитель бросил подпоясал переписывается <span class="badge badge-success">рыба</span> рекламных однажды предупреждал страна.
         </div>
-    </div>
+
 
     <button type="button" class="btn btn-primary">
         Уведомления <span class="badge badge-light">2</span>
@@ -74,6 +74,7 @@
         <span class="badge badge-info">Info</span>
         <span class="badge badge-light">Light</span>
         <span class="badge badge-dark">Dark</span>
+        </div>
     </div>
 </div>
 
@@ -82,165 +83,142 @@
     <div class="row">
         <div class="col-12">
             <ul class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">ИУКиК</a></li>
+                <li class="breadcrumb-item"><a href="#">IVKHK</a></li>
                 <li class="breadcrumb-item"><a href="#">Курсы</a></li>
                 <li class="breadcrumb-item"><a href="#">Bootstrap 4</a></li>
                 <li class="breadcrumb-item active">Урок 3 (компоненты)</li>
             </ul>
+        </div>
             
             <div class="col-12">
                 <div class="breadcrumb">
-                    <div class="breadcrumb-item"><a href="#">ИУКиК</a></div>
+                    <div class="breadcrumb-item"><a href="#">IVKHK</a></div>
                     <div class="breadcrumb-item"><a href="#">Курсы</a></div>
                     <div class="breadcrumb-item"><a href="#">Bootstrap 4</a></div>
                     <div class="breadcrumb-item active">Урок 3 (компоненты)</div>
                 </div>
             </div>
+        </div>
+    </div>
             
-            <h3>Карточки</h3>
-            <div class="container">
-                <div class="row">
-                    <div class="col-3">
-                        <div class="card">
-                            <img class="card-img-top" src="img/1.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Моя карточка</h5>
-                                <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
+    <h3>Карточки</h3>
+    <div class="container">
+        <div class="row">
+            <!-- Карточка 1 -->
+            <div class="col-3">
+                <div class="card">
+                    <img class="card-img-top" src="img/1.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Моя карточка</h5>
+                        <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
-            
-                    <div class="col-3">
-                        <div class="card text-white">
-                            <img class="card-img" src="img/redkie-zhivotnie-krasniy-volk.jpg" alt="Card image cap">
-                            <div class="card-img-overlay">
-                                <h5 class="card-title">Моя карточка</h5>
-                                <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
-                            </div>
-                        </div>
+                </div>
+            </div>
+    
+            <!-- Карточка 2 с наложенным текстом -->
+            <div class="col-3">
+                <div class="card text-white">
+                    <img class="card-img" src="img/redkie-zhivotnie-krasniy-volk.jpg" alt="Card image cap">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Моя карточка</h5>
+                        <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
                     </div>
-                    <div class="col-3">
-                        <div class="card">
-                            <div class="card-header">
-                                <h5 class="card-title">Моя карточка</h5>
-                            </div>
-                            <div class="card-body">
-                                <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                    
-                            <div class="col-3">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Моя карточка</h5>
-                                        <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                                    </div>
-                                    <img class="card-img-bottom" src="img/rys.jpg" alt="Card image cap">
-                                </div>
-                            </div>
-                    
-                            <div class="col-3">
-                                <div class="card text-right">
-                                    <div class="card-header">
-                                        <h5 class="card-title">Цитата</h5>
-                                    </div>
-                                    <div class="card-body">
-                                        <blockquote>
-                                            <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
-                                            <div class="blockquote-footer">описание <cite>Автор</cite></div>
-                                        </blockquote>
-                                    </div>
-                                </div>
-                            </div>
-                    
-                            <div class="col-3">
-                                <div class="card text-center">
-                                    <div class="card-header">
-                                        <h5 class="card-title">Моя карточка</h5>
-                                    </div>
-                                    <div class="card-body">
-                                        <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                                    </div>
-                                    <div class="card-footer">
-                                        <h5 class="card-title">подвал</h5>
-                                    </div>
-                                </div>
-                            
-                                <div class="col-3">
-                                    <div class="card text-center bg-primary text-white">
-                                        <div class="card-header">
-                                            <h5 class="card-title">Моя карточка</h5>
-                                        </div>
-                                        <div class="card-body">
-                                            <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
-                                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                                        </div>
-                                        <div class="card-footer">
-                                            <h5 class="card-title">подвал</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            
-                                <div class="col-3">
-                                    <div class="card text-center bg-danger text-white">
-                                        <div class="card-header">
-                                            <h5 class="card-title">Моя карточка</h5>
-                                        </div>
-                                        <div class="card-body">
-                                            <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
-                                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                                        </div>
-                                        <div class="card-footer">
-                                            <h5 class="card-title">подвал</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            
-                                <div class="col-3">
-                                    <div class="card text-center bg-success text-white">
-                                        <div class="card-header">
-                                            <h5 class="card-title">Моя карточка</h5>
-                                        </div>
-                                        <div class="card-body">
-                                            <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
-                                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                                        </div>
-                                        <div class="card-footer">
-                                            <h5 class="card-title">подвал</h5>
-                                        </div>
-                                    </div>
-                                
-                                    <div class="card text-center">
-                                        <div class="card-header">
-                                            <h5 class="card-title">Моя карточка</h5>
-                                        </div>
-                                        <div class="card-body">
-                                            <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
-                                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                                        </div>
-                                        <div class="card-footer border-warning">
-                                            <h5 class="card-title">подвал</h5>
-                                        </div>
-                                    </div>
-                                
-                                    <div class="card text-center border-info">
-                                        <div class="card-header border-info">
-                                            <h5 class="card-title">Моя карточка</h5>
-                                        </div>
-                                        <div class="card-body border-info">
-                                            <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
-                                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                                        </div>
-                                        <div class="card-footer border-info">
-                                            <h5 class="card-title">подвал</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                </div>
+            </div>
+    
+            <!-- Карточка 3 с заголовком -->
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title">Моя карточка</h5>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+    
+            <!-- Карточка 4 с изображением снизу -->
+            <div class="col-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Моя карточка</h5>
+                        <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                    <img class="card-img-bottom" src="img/rys.jpg" alt="Card image cap">
+                </div>
+            </div>
+        </div>
+    
+        <div class="row">
+            <!-- Карточка 5 с цитатой -->
+            <div class="col-3">
+                <div class="card text-right">
+                    <div class="card-header">
+                        <h5 class="card-title">Цитата</h5>
+                    </div>
+                    <div class="card-body">
+                        <blockquote>
+                            <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
+                            <div class="blockquote-footer">описание <cite>Автор</cite></div>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+    
+            <!-- Карточка 6 с подвалом -->
+            <div class="col-3">
+                <div class="card text-center">
+                    <div class="card-header">
+                        <h5 class="card-title">Моя карточка</h5>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                    <div class="card-footer">
+                        <h5 class="card-title">подвал</h5>
+                    </div>
+                </div>
+            </div>
+    
+            <!-- Карточка 7 с цветным фоном -->
+            <div class="col-3">
+                <div class="card text-center bg-primary text-white">
+                    <div class="card-header">
+                        <h5 class="card-title">Моя карточка</h5>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                    <div class="card-footer">
+                        <h5 class="card-title">подвал</h5>
+                    </div>
+                </div>
+            </div>
+    
+            <!-- Карточка 8 с границей -->
+            <div class="col-3">
+                <div class="card text-center border-info">
+                    <div class="card-header border-info">
+                        <h5 class="card-title">Моя карточка</h5>
+                    </div>
+                    <div class="card-body border-info">
+                        <p class="card-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                    <div class="card-footer border-info">
+                        <h5 class="card-title">подвал</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
                                 
                                 <h3>Кнопки, группы кнопок</h3>
                                 <div class="container">
